# frosty-hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
frosty_hooks/: csharp_dotnet_format.py  csharp_dotnet_test.py  npm_run_test.py  xml_format.py
