[metadata]
name = frosty_hooks
version = 0.1
description = Simple Frosty Hooks for Pre-Commit
url = https://github.com/james9001/frosty-hooks.git
author = james9001
author_email = james9001@james9001.net

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    xml-format = frosty_hooks.xml_format:main
    csharp-dotnet-format = frosty_hooks.csharp_dotnet_format:main
    csharp-dotnet-test = frosty_hooks.csharp_dotnet_test:main
    npm-run-test = frosty_hooks.npm_run_test:main
